--- a/scipy_proc.cfg
+++ b/scipy_proc.cfg
@@ -1,5 +1,2 @@
 [default]
-conference_long = 9th Python in Science Conference
-conference_short = SciPy2010
-year = 2010
-editors = S. J. van der Walt, J. Millman
+proceedings_title = PROC. OF THE 9th PYTHON IN SCIENCE CONF. (SCIPY 2010)
